# pyclingo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  TODO.md  pyproject.toml  solver.py
.github/workflows/: ci.yml  publish.yml
aspalchemy/: CLAUDE.md  MATH.md  __init__.py  choice.py  clingo_handler.py  conditioned_element.py  core.py  exceptions.py  operators.py  predicate.py  program_elements.py  scoping.py  solve_result.py  solver.py  source_location.py  version.py
aspuzzle/: CLAUDE.md  grid.py  puzzle.py  regionconstructor.py  symbolset.py  utils.py
aspuzzle/grids/: CLAUDE.md  base.py  rectangulargrid.py  region_coloring.py  rendering.py
aspuzzle/solvers/: CLAUDE.md  base.py  cave.py  fillomino.py  galaxies.py  hitori.py  minesweeper.py  numberlink.py  nurikabe.py  skyscrapers.py  slitherlink.py  starbattle.py  starbattle_shapeless.py  stitches.py  sudoku.py  tents.py
docs/: Gemfile  README.md  _config.yml  choices-and-aggregates.md  clingo-map.md  diagnostics.md  escape-hatches.md  faq.md  getting-started.md  index.md  math.md  numberlink.md  predicates.md  reference.md  rules.md  solving.md  statements.md  unsupported.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
examples/: minesweeper.json  slitherlink.json  starbattle.json  starbattle_shapeless.json  stitches.json  tents.json
puzzles/: CLAUDE.md  cave.json  fillomino.json  galaxies.json  hitori.json  minesweeper.json  numberlink.json  nurikabe.json  skyscrapers.json  slitherlink.json  starbattle.json  starbattle_shapeless.json  stitches.json  sudoku.json  sudoku_4x4.json  sudoku_6x6.json  tents.json
pyclingo/: CLAUDE.md  MATH.md  README.md  __init__.py  aggregates.py  choice.py  clingo_handler.py  comparison_mixin.py  conditional_literal.py  conditioned_element.py  core.py  exceptions.py  expression.py  negation.py  operators.py  optimization.py  pool.py  predicate.py  program_elements.py  scoping.py  segment.py  solve_result.py  solver.py  source_location.py  statistics.py  term.py  types.py  utils.py  value.py  version.py
rules/: CLAUDE.md  cave.md  fillomino.md  galaxies.md  hitori.md  minesweeper.md  numberlink.md  nurikabe.md  slitherlink.md  starbattle.md  stitches.md  sudoku.md  tent.md
scripts/: minesweeper.py  minesweeper_v2.py  starbattle.py  utils.py
solver_scripts/: CLAUDE.md  cave.pl  fillomino.pl  galaxies.pl  hitori.pl  minesweeper.pl  numberlink.pl  nurikabe.pl  skyscrapers.pl  slitherlink.pl  starbattle.pl  starbattle_shapeless.pl  stitches.pl  sudoku.pl  sudoku_4x4.pl  sudoku_6x6.pl  tents.pl
src/aspalchemy/: CLAUDE.md  __init__.py  aggregates.py  analysis.py  choice.py  conditional_literal.py  conditioned_element.py  core.py  operators.py  optimization.py  predicate.py  program_elements.py  recursion.py  scoping.py  segment.py  solve_result.py  solver.py
tests/: CLAUDE.md  conftest.py  test_conftest_checker.py  test_puzzles.py
tests/aspalchemy/: test_aggregates.py  test_architecture.py  test_arithmetic.py  test_arithmetic_fuzz.py  test_choice.py  test_classical_negation.py  test_clingo_handler.py  test_comments.py  test_compound_comparisons.py  test_conditional_literal.py  test_consequences.py  test_copy.py  test_doc_links.py  test_e2e_numberlink.py  test_end_to_end.py  test_equality.py  test_field_types.py  test_field_typing_conformance.py  test_ground_output.py  test_grounded_program.py  test_namespace_clones.py  test_negation.py  test_optimization.py  test_optimize_solve.py  test_predicate.py  test_program_builder.py  test_raw_asp.py  test_readme.py  test_reconstruction.py  test_recursion_profile.py  test_require.py  test_scoping.py  test_segments.py  test_show_directives.py  test_solve_limits.py  test_solve_result.py  test_source_location.py  test_statement_profile.py  test_statistics.py  test_typed_predicates.py  (+3 more)
tests/pyclingo/: test_aggregates.py  test_architecture.py  test_arithmetic.py  test_arithmetic_fuzz.py  test_choice.py  test_classical_negation.py  test_clingo_handler.py  test_comments.py  test_compound_comparisons.py  test_conditional_literal.py  test_consequences.py  test_e2e_numberlink.py  test_end_to_end.py  test_equality.py  test_expression.py  test_field_types.py  test_field_typing_conformance.py  test_grounded_program.py  test_namespace_clones.py  test_negation.py  test_optimization.py  test_optimize_solve.py  test_predicate.py  test_program_builder.py  test_raw_asp.py  test_readme.py  test_reconstruction.py  test_require.py  test_round_trip.py  test_rules.py  test_scoping.py  test_segments.py  test_show_directives.py  test_solve_limits.py  test_solve_result.py  test_solver.py  test_source_location.py  test_statistics.py  test_symbol.py  test_typed_predicates.py  (+4 more)
