[project]
name = "pyclingo"
version = "0.2.0"
description = "A python wrapper for clingo with ASP puzzle solving capabilities"
license = { text = "MIT" }
readme = "pyclingo/README.md"
requires-python = ">=3.14"
authors = [{ name = "Jolyon Bloomfield", email = "jkb84@cornell.edu" }]
dependencies = ["clingo>=5.8.0,<6"]

[dependency-groups]
dev = [
    "mypy>=2.1",
    "pre-commit>=4.6",
    "pyright>=1.1.411",
    "ruff>=0.15",
    "pytest>=9.1",
    "ty>=0.0.56",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
# Internal docs and OS litter must not ship in the wheel
source-exclude = ["pyclingo/CLAUDE.md", "**/.DS_Store"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
files = ["pyclingo", "aspuzzle", "tests", "solveit.py"]

[tool.pyright]
include = ["pyclingo", "aspuzzle", "tests", "solveit.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "Q", "RET", "RUF", "SIM", "UP", "W"]
# RUF001/RUF002/RUF003: flag legitimate typography ("9×9 grid") as ambiguous unicode
ignore = [
    "RUF001", "RUF002", "RUF003",  # legitimate typography (9×9 grids)
    "SIM300",  # 'yoda' flips change which operand builds the ASP Comparison, churning rendered output
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Solver's no-op methods are optional hooks for subclasses, not forgotten abstracts
"aspuzzle/solvers/base.py" = ["B027"]

[tool.ruff.lint.isort]
known-first-party = ["pyclingo", "aspuzzle"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = ["tests", "pyclingo"]
addopts = "--doctest-modules"
markers = [
    "allow_invalid_render: opt this test out of the suite-wide render parse-check (for tests exercising invalid-program error handling)",
]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["pyclingo"]

[tool.coverage.report]
# Line coverage of pyclingo must be total. Genuinely unexecutable lines are
# excluded here (not with scattered pragmas): abstract-method bodies that
# subclasses always override, and type-checking-only imports.
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
