[project]
name = "aspalchemy"
version = "1.0.0"
description = "A Python ORM interface for building and solving clingo ASP programs"
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "docs/README.md"
requires-python = ">=3.14"
authors = [{ name = "Jolyon Bloomfield", email = "jolyonb84@gmail.com" }]
dependencies = ["clingo>=5.8.0,<6"]

[dependency-groups]
dev = [
    "mypy>=2.1",
    "pre-commit>=4.6",
    "pyright>=1.1.411",
    "ruff>=0.15",
    "pytest>=9.1",
    "ty>=0.0.56",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Internal docs and OS litter must not ship in the wheel
source-exclude = ["src/aspalchemy/CLAUDE.md", "**/.DS_Store"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
files = ["src", "tests"]

[tool.pyright]
include = ["src", "tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "Q", "RET", "RUF", "SIM", "UP", "W"]
# RUF001/RUF002/RUF003: flag legitimate typography ("9×9 grid") as ambiguous unicode
ignore = [
    "RUF001", "RUF002", "RUF003",  # legitimate typography (9×9 grids)
    "SIM300",  # 'yoda' flips change which operand builds the ASP Comparison, churning rendered output
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["aspalchemy"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/aspalchemy"]
addopts = "--doctest-modules"
markers = [
    "allow_invalid_render: opt this test out of the suite-wide render parse-check (for tests exercising invalid-program error handling)",
]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["aspalchemy"]

[tool.coverage.report]
# Line coverage of aspalchemy must be total. Genuinely unexecutable lines are
# excluded here (not with scattered pragmas): abstract-method bodies that
# subclasses always override, and type-checking-only imports.
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
